--- a/OntoMaven-CL/pom.xml
+++ b/OntoMaven-CL/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>com.thaiopensource</groupId>
+			<artifactId>jing</artifactId>
+			<version>20091111</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
