--- a/OntoMaven-OWL/pom.xml
+++ b/OntoMaven-OWL/pom.xml
@@ -6,6 +6,7 @@
 	<packaging>maven-plugin</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<artifactId>ontomaven</artifactId>
+	<!--
 	<profiles>
 		<profile>
 			<id>2</id>
@@ -21,16 +22,15 @@
 					<name>Archiva Managed Snapshot Repository</name>
 					<url>http://localhost:8080/archiva/repository/snapshots/</url>
 				</repository>
-
 				<repository>
 					<id>on.cs.unibas.ch</id>
 					<name>DBIS Maven Releases Repository</name>
 					<url>http://on.cs.unibas.ch/maven/repository</url>
 				</repository>
-
 			</repositories>
 		</profile>
 	</profiles>
+	-->
 
 	<dependencies>
 		<dependency>
@@ -84,11 +84,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>com.owldl</groupId>
 			<artifactId>pellet</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>com.sun.org.apache.xml.internal</groupId>
 			<artifactId>resolver</artifactId>
@@ -113,6 +115,16 @@
 			<groupId>org.apache.maven.doxia</groupId>
 			<artifactId>doxia-site-renderer</artifactId>
 			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ansell.pellet</groupId>
+			<artifactId>pellet-owlapiv3</artifactId>
+			<version>2.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ansell.pellet</groupId>
+			<artifactId>pellet-explanation</artifactId>
+			<version>2.3.2</version>
 		</dependency>
 
 	</dependencies>
