--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ xcl2.rnc
 OntoMaven-OWL/archiva/owlsyntax_archiva/target
 OntoMaven-OWL/target
 OntoMaven-OWL/test/test_mvnowlreport/target
+OntoMaven-CL/.settings
+OntoMaven-CL/target
