--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ OntoMaven-OWL/target
 OntoMaven-OWL/test/test_mvnowlreport/target
 OntoMaven-CL/.settings
 OntoMaven-CL/target
+OntoMaven-OWL/.settings
