--- a/OntoMaven-Examples/Testimport/pom.xml
+++ b/OntoMaven-Examples/Testimport/pom.xml
@@ -37,12 +37,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.csw.MvnOnt</groupId>
-    <artifactId>Testimport</artifactId>
+    <groupId>de.csw.test</groupId>
+    <artifactId>test_import</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Testimport</name>
+    <name>Test Import</name>
     <url>http://maven.apache.org</url>
 
     <properties>
