--- a/OntoMaven-Examples/test_mvnowlreport/pom.xml
+++ b/OntoMaven-Examples/test_mvnowlreport/pom.xml
@@ -37,12 +37,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.test</groupId>
+    <groupId>de.csw.test</groupId>
     <artifactId>test_mvnowlreport</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>test_mvnowlreport</name>
+    <name>Test Maven OWL Report</name>
     <url>http://maven.apache.org</url>
 
     <properties>
