--- a/OntoMaven-OWL/pom.xml
+++ b/OntoMaven-OWL/pom.xml
@@ -6,6 +6,7 @@
 	<packaging>maven-plugin</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<artifactId>ontomaven</artifactId>
+    <name>OntoMaven</name>
 	<!--
 	<profiles>
 		<profile>
