--- a/OntoMaven-OWL/pom.xml
+++ b/OntoMaven-OWL/pom.xml
@@ -97,10 +97,29 @@
             <artifactId>org.semanticweb.hermit</artifactId>
             <version>1.3.8.510</version>
         </dependency>
+        <dependency>
+            <groupId>edu.stanford.protege</groupId>
+            <artifactId>org.protege.xmlcatalog</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
-		<plugins>
+
+        <testResources>
+            <testResource>
+                <directory>${project.build.testSourceDirectory}/../repo</directory>
+            </testResource>
+        </testResources>
+
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
